1. Cleaned up HTML for better readability & removed 'outer' div from pages other than index 2. Individual blog posts now display correctly, changed bottom margin on h2 to 0, top to 2em

--- a/styles/style.css
+++ b/styles/style.css
@@ -1026,7 +1026,7 @@ h3 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  min-height: 100vh;
+  min-height: 300px;
   width: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
